# knowledge-qa-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG_PRODUCTION.md  Dockerfile  README.md  TODO_P1_P2.md  UPGRADE.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  run_server.py  start.bat  test_live.py
app/: config.py  embeddings.py  exceptions.py  main.py  monitoring.py  reranker.py  utils.py
app/agent/: conversation.py  llm_client.py  qa_agent.py  query_processor.py  tools.py
app/database/: base.py  markdown_store.py  semantic_store.py  sql_store.py  vector_store.py
app/middleware/: auth.py  rate_limit.py  security.py
app/models/: schemas.py
app/routers/: api.py
app/templates/: index.html
knowledge/: 2020-01-23__浙江海翔药业股份有限公司__002099__海翔药业__2019年__年度报告.md  2020-01-23__浙江海翔药业股份有限公司__002099__海翔药业__2019年__年度报告_20260610092636.md  2020-01-23__浙江海翔药业股份有限公司__002099__海翔药业__2019年__年度报告_20260610093014.md  2020-01-23__浙江海翔药业股份有限公司__002099__海翔药业__2019年__年度报告_20260610093332.md  2020-02-20__上海家化联合股份有限公司__600315__上海家化__2019年__年度报告.md  2020-02-20__山东益生种畜禽股份有限公司__002458__益生股份__2019年__年度报告.md  2020-02-22__奇精机械股份有限公司__603677__奇精机械__2019年__年度报告.pdf.md  Docker.md  Java入门.md  Python.md  Python_编程语言.md  Python基础.md  Python测试.md  readme.md  sample.md  test_doc.md  testfile.md  tiny.md  untitled.md  untitled_20260608091149.md  untitled_20260608091150.md  数据科学.md  文档1.md  文档2.md  测试文档.md
tests/: conftest.py  test_agent.py  test_config.py  test_database.py  test_integration.py  test_markdown_store.py
