[project]
name = "knowledge-qa-agent"
version = "2.0.0"
description = "知识问答 Agent - 混合检索知识问答系统"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.8",
]
metrics = [
    "prometheus-client>=0.19",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
